--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -20,7 +20,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -45,7 +45,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivPoster" />
 
@@ -56,7 +56,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
@@ -67,7 +67,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivPoster" />
 
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toEndOf="@+id/txtYear"
             app:layout_constraintTop_toTopOf="@+id/txtYear" />
 
@@ -90,7 +90,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvMovieLength" />
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPlot" />
@@ -110,7 +110,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPersonalHeader" />
@@ -124,7 +124,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPersonalRating" />
@@ -136,7 +136,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="32dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toEndOf="@+id/tvGenreHeader"
             app:layout_constraintTop_toBottomOf="@+id/tvPersonalNotes" />
 
@@ -147,7 +147,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvPersonalNotes" />
 
@@ -158,7 +158,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvGenreHeader" />
 
@@ -169,7 +169,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="16dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toEndOf="@+id/tvDirectorHeader"
             app:layout_constraintTop_toBottomOf="@+id/tvGenre" />
 
@@ -180,7 +180,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvDirectorHeader" />
 
@@ -191,7 +191,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="16dp"
-            android:text="@string/DefaultText"
+            android:text="@string/default_text"
             app:layout_constraintStart_toEndOf="@+id/tvWriterHeader"
             app:layout_constraintTop_toBottomOf="@+id/tvDirector" />
     </androidx.constraintlayout.widget.ConstraintLayout>
