Added share functionality. Added toasts when a movie has been added or shared. Added more icons to ListActivity menu.

--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -2,10 +2,14 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/app_bar_filterByCategory"
+        android:icon="@drawable/ic_filter_list_24px"
+        android:title="Filter"
+        app:showAsAction="ifRoom|collapseActionView" />
+    <item
         android:id="@+id/app_bar_sortByRating"
-        android:icon="@android:drawable/arrow_down_float"
+        android:icon="@drawable/ic_sort_24px"
         android:title="Sort"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
     <item
         android:id="@+id/app_bar_search"
