--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:alpha="0.9"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add_24px"
