Moved hard coded string to resources. Deleted MainActivity.

--- a/app/src/main/res/layout/share_dialog.xml
+++ b/app/src/main/res/layout/share_dialog.xml
@@ -11,10 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="email@address.com"
+        android:hint="@string/example_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="@string/example_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
