--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/app_bar_shareMovie"
         android:icon="@drawable/ic_share_black_24dp"
-        android:title="Share"
-        app:showAsAction="ifRoom|collapseActionView" />
+        android:title="@string/share_text"
+        app:showAsAction="ifRoom|collapseActionView"
+        tools:ignore="HardcodedText" />
 </menu>
