Leget videre med looket på detailsacitity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">casual</item>
+
     </style>
     <style name="TextHeader" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Style for deault headers -->
-        <item name="android:fontFamily">monospace</item>
+        <item name="android:fontFamily">casual</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
+        <!--<item name="android:textSize">12sp</item> -->
     </style>
 
 </resources>
