--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -28,12 +28,14 @@
         <TextView
             android:id="@+id/txtTitle"
             android:layout_width="188dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="116dp"
             android:layout_marginLeft="116dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:maxLines="4"
+            android:singleLine="false"
             android:text="Title"
             android:textSize="28sp"
             app:layout_constraintEnd_toStartOf="@+id/txtRating"
@@ -44,10 +46,12 @@
             android:id="@+id/txtYear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:text="Year"
             android:textColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/txtTitle"
             app:layout_constraintStart_toStartOf="@+id/txtTitle"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
