--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -25,9 +25,10 @@
             <ImageView
                 android:id="@+id/ivPoster"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
+                android:layout_height="260dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                 app:srcCompat="@mipmap/ic_launcher" />
 
@@ -37,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/default_text"
-                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:textSize="32sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,44 +51,49 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/default_text"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivPoster" />
+                app:layout_constraintTop_toTopOf="@+id/ivPoster" />
 
             <TextView
                 android:id="@+id/txtIMdBRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
                 android:text="@string/default_text"
+                android:textColor="@color/colorAccent"
                 android:textSize="36sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivPoster" />
+                app:layout_constraintEnd_toStartOf="@+id/ivPoster"
+                app:layout_constraintStart_toEndOf="@+id/txtMovieLength"
+                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
             <TextView
                 android:id="@+id/txtMovieLength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
                 android:text="@string/default_text"
+                app:layout_constraintEnd_toStartOf="@+id/txtIMdBRating"
                 app:layout_constraintStart_toEndOf="@+id/txtYear"
                 app:layout_constraintTop_toTopOf="@+id/txtYear" />
 
             <TextView
                 android:id="@+id/txtPlot"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginLeft="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:overScrollMode="always"
+                android:scrollbarStyle="insideInset"
+                android:scrollbars="vertical"
+                android:fadeScrollbars="false"
                 android:text="@string/default_text"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
+                app:layout_constraintEnd_toStartOf="@+id/ivPoster"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtMovieLength" />
+                app:layout_constraintTop_toBottomOf="@+id/txtIMdBRating" />
 
             <TextView
                 android:id="@+id/txtGenre"
@@ -126,7 +133,7 @@
                 android:text="@string/director_text"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtGenreHeader" />
+                app:layout_constraintTop_toBottomOf="@+id/txtGenre" />
 
             <TextView
                 android:id="@+id/txtDirector"
@@ -153,7 +160,7 @@
                 android:text="@string/writer_text"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtDirectorHeader" />
+                app:layout_constraintTop_toBottomOf="@+id/txtDirector" />
 
             <TextView
                 android:id="@+id/txtWriter"
@@ -173,10 +180,10 @@
                 android:id="@+id/ratingBar"
                 style="@style/Widget.AppCompat.RatingBar.Indicator"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:isIndicator="false"
@@ -193,12 +200,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:ems="10"
                 android:gravity="start|top"
+                android:hint="@string/personal_notes_hint"
                 android:inputType="textMultiLine"
+                android:textColorHint="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -212,7 +221,9 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:text="Personal Notes"
+                android:text="@string/personal_notes_text"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -228,9 +239,12 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:text="Personal Rating"
+                android:text="@string/personal_rating_text"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPlot" />
 
@@ -248,11 +262,13 @@
 
             <TextView
                 android:id="@+id/txtActors"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
                 android:layout_marginLeft="80dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:maxLines="4"
                 android:singleLine="false"
                 android:text="@string/default_text"
@@ -274,11 +290,13 @@
 
             <TextView
                 android:id="@+id/txtAwards"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
                 android:layout_marginLeft="80dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:text="@string/default_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -296,7 +314,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="UPDATE"
+        android:background="@color/colorAccentLight"
+        android:text="@string/update_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -307,6 +326,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorAccentLight"
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
