--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">casual</item>
+        <item name="android:textSize">14sp</item> >
+
 
     </style>
     <style name="TextHeader" parent="Theme.AppCompat.Light.NoActionBar">
