Løst problemet med forskellige tekst-længder i plot

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -80,17 +80,14 @@
             <TextView
                 android:id="@+id/txtPlot"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:overScrollMode="always"
-                android:scrollbarStyle="insideInset"
-                android:scrollbars="vertical"
-                android:fadeScrollbars="false"
+                android:ellipsize="end"
+                android:minLines="8"
                 android:text="@string/default_text"
-                app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
                 app:layout_constraintEnd_toStartOf="@+id/ivPoster"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtIMdBRating" />
